apps/kometa/kometa-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kometa
  namespace: apps
  labels: { app: kometa }
spec:
  replicas: 1
  selector: { matchLabels: { app: kometa } }
  template:
    metadata: { labels: { app: kometa } }
    spec:
      containers:
      - name: kometa
        image: lscr.io/linuxserver/kometa:latest
        imagePullPolicy: Always
        volumeMounts:
        - { name: config, mountPath: /config }
      volumes:
      - name: config
        persistentVolumeClaim: { claimName: kometa-config-claim }
