apps/kometa/kometa-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kometa
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: kometa.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kometa-quickstart
            port:
              number: 7171
